add announsment and implementation

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -22,9 +22,10 @@ NAME		:= braiiiiiiinnnzzzz
 
 INCS		:= .
 
-SRCS		:=	mapb.cpp	\
-				Contact.cpp	\
-				PhoneBook.cpp			
+SRCS		:=	main.cpp		\
+				Zombie.cpp		\
+				newZombie.cpp	\
+				randomChump.cpp
 
 OBJ_DIR		:=	obj
 
